# comicworm

./: .gitignore  README.md  pubspec.yaml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: app.dart  bridge_generated.dart  home_page.dart  main.dart
lib/component/: filter_button.dart  filter_dialog.dart  navigation_column.dart  search_box.dart  search_result_block.dart  search_result_card.dart  source_block.dart
lib/component/navigation/: logo_block.dart  navigation_column.dart
lib/component/search/: filter_dialog.dart  search_box.dart  search_result_block.dart  search_result_card.dart
lib/component/setting/: reset_button.dart  source_block.dart
lib/model/: search_result.dart
lib/provider/: search_result_provider.dart  select_sites_provider.dart  source_provider.dart
lib/screen/: download_screen.dart  home_screen.dart  search_screen.dart  setting_screen.dart  task_screen.dart  test_screen.dart
linux/: CMakeLists.txt  my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner/Configs/: AppInfo.xcconfig
rust/: Cargo.toml  setdll.bat
rust/src/: api.rs  backend_module.rs  bridge_generated.io.rs  bridge_generated.rs  crawler_manager.rs  lib.rs  search_module.rs  test_module.rs  testmodule.rs
rust/src/crawler/: baozimh_crawler.rs  crawler.rs  crawler_factory.rs  mod.rs  webtoon_crawler.rs
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
(+2 files in other folders)
