[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo-expand = "1.0.79"
flutter_rust_bridge = "1.82.6"
flutter_rust_bridge_codegen = "1.82.6"
serde_json = "1.0"


[lib]
name = "rust"
path = "src/lib.rs"
crate-type = ["cdylib"]
